<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".CleanOptionActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:background="@drawable/ic_sub_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/backIV"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/topTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Cleaner"
            android:textColor="#fff"
            android:textSize="@dimen/toolbarText" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/imgBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/iamge" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/images"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/videoBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/video" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/videos"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/docBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/doc" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/document"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/audioBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/audio" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/audio"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stickerBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/iamge" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/stickers"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wallBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/wallp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/wallpaper"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gifBtn"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="0B"
                    android:textColor="@color/mb_text"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_btn_icon_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/gif" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:text="@string/gifs"
                    android:textColor="@color/h_btn_text_color"
                    android:textSize="@dimen/_15sdp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    
</androidx.constraintlayout.widget.ConstraintLayout>