<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".WACleanerActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:background="@drawable/ic_sub_top">


        <ImageView
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/topTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Cleaner"
            android:textColor="#fff"
            android:textSize="@dimen/toolbarText" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btmLay"
        android:layout_below="@+id/header" />

    <LinearLayout
        android:id="@+id/sAccessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/wapp_permission"
            android:textColor="@color/h_btn_text_color"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/home_btn"
            android:gravity="center"
            android:text="@string/allow_storage_access"
            android:textColor="@color/h_btn_text_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btmLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="0.48"
            android:background="@drawable/home_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/home_btn_icon_bg" />

                <CheckBox
                    android:id="@+id/selectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:buttonTint="#fff"
                    android:src="@drawable/downbtn" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Select All"
                android:textColor="@color/h_btn_text_color"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="0.48"
            android:background="@drawable/home_btn"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/img"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/home_btn_icon_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pdelete" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center|left"
                android:lines="3"
                android:text="@string/delete_items_blank"
                android:textColor="@color/h_btn_text_color"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/loader_lay" />

    <include layout="@layout/empty_files" />
</RelativeLayout>